--- a/Client/Components/OptionsMenuComponent.razor
+++ b/Client/Components/OptionsMenuComponent.razor
@@ -4,8 +4,18 @@
 @using Microsoft.AspNetCore.Components.Web
 @inject HttpClient Http
 
-<button @onclick="(() => iseditBtnClicked = !iseditBtnClicked)">עריכה🖋️</button>
-<button @onclick="(() => isdeleteBtnClicked = !isdeleteBtnClicked)">מחיקה🗑️</button>
+<div class="outerOptions">
+    <button class="optionButton editButton" @onclick="(() => iseditBtnClicked = !iseditBtnClicked)">
+        <img src="../css/images/edit_pencil.svg" class="icon" />
+        עריכה
+    </button>
+    <div class="lineBetween"> </div>
+    <button class="optionButton deleteButton" @onclick="(() => isdeleteBtnClicked = !isdeleteBtnClicked)">
+        <img src="../css/images/trash.svg" class="icon" />
+        מחיקה
+    </button>
+</div>
+
 
 @if (iseditBtnClicked)
 {
@@ -30,9 +40,15 @@
     [Parameter]
     public EventCallback deleteBtnClicked { get; set; }
 
+    [Parameter]
+    public EventCallback<bool> closeOverlay { get; set; }
+
     public bool iseditBtnClicked;
     public bool isdeleteBtnClicked;
 
-
+    void closeDeleteOverLay()
+    {
+        closeOverlay.InvokeAsync(true);
+    }
 
 }
