--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1007,14 +1007,13 @@ else
     }
 
 
-}
 <!-- 
     //    protected override async Task OnAfterRenderAsync(bool firstRender)
     //    {
     //        if (firstRender)
     //        {
     //            isScrollingDown = false;
-    //            await JSRuntime.InvokeVoidAsync("eval", @"
+    //            await JSRuntime.InvokeVoidAsync("eval", "
     //setTimeout(function() {
     //    let lastScroll = window.pageYOffset || document.documentElement.scrollTop;
     //     isScrollingDown = false;
@@ -1038,5 +1037,6 @@ else
 
 
 <!-- } -->
+}
 
 
